--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Blackjack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="assets/Casino.ttf" rel="stylesheet" />
     <script src="js/app.js" defer type="module"></script>
   </head>
 
   <body>
     <main id="players" class="players">
-      <header><h1>Blackjack</h1></header>
+      <header><h1>BLACKJACK</h1></header>
     </main>
     <footer class="footer">
       <div id="game" class="game">
