--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <body>
     <main id="players" class="players">
-      <header><h1>BLACKJACK</h1></header>
+      <header><h1>BlackJack</h1></header>
+      <h2 class="text-center">Dealer must draw to 16 and stand on 17s</h2>
     </main>
     <footer class="footer">
       <div id="game" class="game">
