Update button styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <footer class="footer">
       <div id="game" class="game">
         <div id="actions_buttons">
-          <button data-action="addplayer">Add Player</button>
-          <button data-action="deal">Deal</button>
+          <button class="button" data-action="addplayer">Add Player</button>
+          <button class="button" data-action="deal">Deal</button>
+          <button class="button" data-action="newgame">New Game</button>
         </div>
       </div>
     </footer>
@@ -34,8 +35,8 @@
         </div>
       </div>
       <footer class="player__ft visually-hidden">
-        <button>Hit</button>
-        <button>Stand</button>
+        <button class="button">Hit</button>
+        <button class="button">Stand</button>
       </footer>
     </template>
 
