Update to winner algorithm

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
         </div>
       </div>
     </footer>
+    <dialog id="winners__dialog" class="winners__dialog">
+      <h2>Winners</h2>
+      <p></p>
+      <form method="dialog">
+        <button class="button">OK</button>
+      </form>
+    </dialog>
     <template id="player__tmpl">
       <header class="player__hd">
         <h3><span class="status visually-hidden"></span></h3>
