Fix 1st card render problem (Dealer and Players) on 2nd game

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </header>
       <div class="player__bd">
         <div class="cards">
-          <div class="card blank">
+          <div class="card accent marker">
             <div><div class="face"></div></div>
           </div>
         </div>
