Bank style tweaks

--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
             <div><div class="face"></div></div>
           </div>
         </div>
-        <div class="wager">
+
+        <div class="bank-panel">
+          <div class="bank">Bank <span class="chip">20</span></div>
           <form class="set-stake">
             <label class="set-stake__label"
               >Stake:
+
               <input
                 class="set-stake__input"
                 type="number"
@@ -56,12 +59,9 @@
               />
             </label>
           </form>
-          <div class="stake visually-hidden">
-            <span class="chip">0</span>
-          </div>
-          <div class="bank">
-            <span class="chip">20</span>
-          </div>
+          <div class="stake">Stake <span class="chip">0</span></div>
+
+          <div class="warning visually-hidden"></div>
         </div>
       </div>
       <footer class="player__ft visually-hidden">
